[sc-8822] Prompt lab

--- a/apps/dashboard/src/app/knowledge-box/knowledge-box-home/knowledge-box-home.component.html
+++ b/apps/dashboard/src/app/knowledge-box/knowledge-box-home/knowledge-box-home.component.html
@@ -125,7 +125,7 @@
               <div>
                 <div class="title-xxs">{{ 'dashboard-home.kb-details.generative-model' | translate }}</div>
                 <div class="body-s">
-                  {{ { name: model, value: model } | learningOption: 'generative_model' }}
+                  {{ model | generativeModel }}
                 </div>
               </div>
             }
