[sc-8851] Fix summary prompt field

--- a/libs/common/src/lib/knowledge-box-settings/knowledge-box-settings.component.html
+++ b/libs/common/src/lib/knowledge-box-settings/knowledge-box-settings.component.html
@@ -271,7 +271,7 @@
                           }
                         </div>
 
-                        @if (learningConfig['summary_prompt'].schemas; as summaryPrompt) {
+                        @if (learningConfig['summary_prompt'].schema; as summaryPrompt) {
                           <div
                             class="fields-container"
                             [formGroup]="summaryPromptForm">
