--- a/libs/common/src/lib/prompt-lab/loading-dialog/loading-dialog.component.scss
+++ b/libs/common/src/lib/prompt-lab/loading-dialog/loading-dialog.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../../pastanaga-angular/projects/pastanaga-angular/src/lib/modal/confirmation-dialog/confirmation-dialog.component';
+@import 'libs/pastanaga-angular/projects/pastanaga-angular/src/lib/modal/confirmation-dialog/confirmation-dialog.component';
 
 .pa-confirmation-dialog {
   padding: rhythm(3);
