Move models from advanced KB settings to new AI models page

--- a/libs/common/src/lib/knowledge-box-settings/knowledge-box-settings.component.html
+++ b/libs/common/src/lib/knowledge-box-settings/knowledge-box-settings.component.html
@@ -49,283 +49,18 @@
             </div>
           }
 
-          <div>
-            <h3 class="title-m models-section-title">
-              {{ 'kb.settings.models-section.title' | translate }}
-              <pa-toggle [(value)]="showAdvancedSection">
-                {{ 'kb.settings.models-section.advanced' | translate }}
-              </pa-toggle>
-            </h3>
-            @if (generativeModelValue) {
-              <pa-input
-                formControlName="semantic_model"
-                readonly
-                [help]="'kb.settings.semantic.help' | translate">
-                {{ 'kb.settings.semantic.label' | translate }}
-              </pa-input>
-            }
-          </div>
-
-          @if (isAnonymizationEnabled | async) {
-            <pa-toggle
-              formControlName="anonymization"
-              labelOnRight
-              [help]="'kb.settings.anonymization_toggle.help' | translate"
-              (valueChange)="updateKbFormTouchedState()">
-              {{ 'kb.settings.anonymization_toggle.label' | translate }}
-            </pa-toggle>
-          }
-          @if (showAdvancedSection) {
-            @if (isPdfAnnotationEnabled | async) {
-              <pa-toggle
-                formControlName="pdf_annotation"
-                labelOnRight
-                [help]="'kb.settings.pdf_annotation_toggle.help' | translate"
-                (valueChange)="updateKbFormTouchedState()">
-                {{ 'kb.settings.pdf_annotation_toggle.label' | translate }}
-              </pa-toggle>
-            }
-          }
-        </form>
-        <form
-          class="fields-container"
-          [formGroup]="configForm"
-          (ngSubmit)="saveKb()">
-          @if (showAdvancedSection) {
-            @if (learningConfigurations; as learningConfig) {
-              <div class="advanced-section">
-                <pa-expander [contentLoaded]="updateGenerativeExpanderHeight | async">
-                  <pa-expander-header>
-                    <div class="title-s">{{ 'kb.settings.generative_model.label' | translate }}</div>
-                  </pa-expander-header>
-                  <pa-expander-body>
-                    <div class="model-expander-body fields-container">
-                      <div class="radio-container">
-                        <label
-                          for="generative"
-                          class="title-xxs">
-                          {{ 'kb.settings.generative_model.help' | translate }}
-                        </label>
-                        @if (learningConfig['generative_model']?.options; as options) {
-                          <pa-radio-group
-                            formControlName="generative_model"
-                            id="generative"
-                            (valueChange)="updateCurrentGenerativeModel($event)">
-                            @for (option of options; track option.value) {
-                              <pa-radio [value]="option.value">
-                                {{ option | learningOption: 'generative_model' }}
-                              </pa-radio>
-                            }
-                          </pa-radio-group>
-                        }
-                      </div>
-
-                      @if ((isEnterpriseOrGrowth | async) && currentGenerativeModelPrompt) {
-                        @if (learningConfig['user_keys'].schemas?.[currentGenerativeModelPrompt]; as userKeys) {
-                          <pa-toggle
-                            labelOnRight
-                            [(value)]="hasOwnKey"
-                            (valueChange)="updateHasOwnKey()">
-                            {{ 'kb.settings.use_own_key.label' | translate }}
-                          </pa-toggle>
-
-                          @if (hasOwnKey) {
-                            <div
-                              class="fields-container small-gap"
-                              [formGroup]="userKeysGroup">
-                              @for (field of userKeys.properties | keyvalue; track field.key) {
-                                @if (field.value['widget'] === 'textarea') {
-                                  <pa-textarea
-                                    resizable
-                                    [formControlName]="field.key"
-                                    [rows]="2"
-                                    [help]="field.value.info">
-                                    {{ field.value.title }}
-                                  </pa-textarea>
-                                } @else {
-                                  <pa-input
-                                    [formControlName]="field.key"
-                                    [help]="field.value.info">
-                                    {{ field.value.title }}
-                                  </pa-input>
-                                }
-                              }
-                            </div>
-                          }
-                        }
-                      }
-
-                      @if ((isUserPromptsEnabled | async) && currentGenerativeModelPrompt) {
-                        @if (learningConfig['user_prompts'].schemas?.[currentGenerativeModelPrompt]; as userPrompt) {
-                          <div
-                            class="fields-container"
-                            [formGroup]="userPromptForm">
-                            @if (userPrompt.properties['prompt']; as prompt) {
-                              <div class="fields-container small-gap">
-                                <div>
-                                  <div class="title-m">{{ 'kb.settings.user_prompts.prompt' | translate }}</div>
-                                  <div class="body-s">
-                                    {{ 'kb.settings.user_prompts.prompt_help' | translate }}
-                                  </div>
-                                  <pa-select
-                                    dim
-                                    formControlName="prompt_examples"
-                                    class="select-with-background"
-                                    [label]="'kb.settings.user_prompts.examples' | translate"
-                                    (valueChange)="setPrompt('user', 'prompt', $event)">
-                                    @for (option of prompt.examples || []; track option) {
-                                      <pa-option [value]="option">
-                                        {{ option }}
-                                      </pa-option>
-                                    }
-                                  </pa-select>
-                                </div>
-                                <pa-textarea
-                                  formControlName="prompt"
-                                  resizable
-                                  [rows]="3"
-                                  [help]="prompt.info || ''">
-                                  {{ prompt.title }}
-                                </pa-textarea>
-                              </div>
-                            }
-
-                            @if (userPrompt.properties['system']; as system) {
-                              <div class="fields-container small-gap">
-                                <div>
-                                  <div class="title-m">{{ 'kb.settings.user_prompts.system' | translate }}</div>
-                                  <div class="body-s">
-                                    {{ 'kb.settings.user_prompts.system_help' | translate }}
-                                  </div>
-                                  <pa-select
-                                    dim
-                                    formControlName="system_examples"
-                                    class="select-with-background"
-                                    [label]="'kb.settings.user_prompts.examples' | translate"
-                                    (valueChange)="setPrompt('user', 'system', $event)">
-                                    @for (option of system.examples || []; track option) {
-                                      <pa-option [value]="option">
-                                        {{ option }}
-                                      </pa-option>
-                                    }
-                                  </pa-select>
-                                </div>
-                                <pa-textarea
-                                  formControlName="system"
-                                  resizable
-                                  [rows]="3"
-                                  [help]="system.info || ''">
-                                  {{ 'kb.settings.generative_model.system_prompt_label' | translate }}
-                                </pa-textarea>
-                              </div>
-                            }
-                          </div>
-                        }
-                      }
-                    </div>
-                  </pa-expander-body>
-                </pa-expander>
-
-                @if (isSummarizationEnabled | async) {
-                  <pa-expander>
-                    <pa-expander-header>
-                      <div class="title-s">{{ 'kb.settings.summary_model.label' | translate }}</div>
-                    </pa-expander-header>
-                    <pa-expander-body>
-                      <div class="model-expander-body fields-container">
-                        <div class="radio-container">
-                          <label
-                            for="summary_model"
-                            class="title-xxs">
-                            {{ 'kb.settings.summary_model.help' | translate }}
-                          </label>
-                          @if (learningConfig['summary_model']?.options; as options) {
-                            <pa-radio-group
-                              formControlName="summary_model"
-                              id="summary_model">
-                              @for (option of options; track option.value) {
-                                <pa-radio [value]="option.value">
-                                  {{ option | learningOption: 'summary_model' }}
-                                </pa-radio>
-                              }
-                            </pa-radio-group>
-                          }
-                        </div>
-
-                        <div class="radio-container">
-                          <label
-                            for="summary"
-                            class="title-xxs">
-                            {{ 'kb.settings.summary.help' | translate }}
-                          </label>
-                          @if (learningConfig['summary']?.options; as options) {
-                            <pa-radio-group
-                              formControlName="summary"
-                              id="summary">
-                              @for (option of options; track option.value) {
-                                <pa-radio [value]="option.value">
-                                  {{ option | learningOption: 'summary' }}
-                                </pa-radio>
-                              }
-                            </pa-radio-group>
-                          }
-                        </div>
-
-                        @if (learningConfig['summary_prompt'].schema; as summaryPrompt) {
-                          <div
-                            class="fields-container"
-                            [formGroup]="summaryPromptForm">
-                            @if (summaryPrompt.properties['prompt']; as prompt) {
-                              <div class="fields-container small-gap">
-                                <div>
-                                  <div class="title-m">{{ 'kb.settings.summary_prompt.prompt' | translate }}</div>
-                                  <div class="body-s">
-                                    {{ 'kb.settings.summary_prompt.prompt_help' | translate }}
-                                  </div>
-                                  <pa-select
-                                    dim
-                                    formControlName="prompt_examples"
-                                    class="select-with-background"
-                                    [label]="'kb.settings.summary_prompt.examples' | translate"
-                                    (valueChange)="setPrompt('summary', 'prompt', $event)">
-                                    @for (option of prompt.examples || []; track option) {
-                                      <pa-option [value]="option">
-                                        {{ option }}
-                                      </pa-option>
-                                    }
-                                  </pa-select>
-                                </div>
-                                <pa-textarea
-                                  formControlName="prompt"
-                                  resizable
-                                  [rows]="3"
-                                  [help]="prompt.info || ''">
-                                  {{ prompt.title }}
-                                </pa-textarea>
-                              </div>
-                            }
-                          </div>
-                        }
-                      </div>
-                    </pa-expander-body>
-                  </pa-expander>
-                }
-              </div>
-            }
-          }
-
           <footer>
             <pa-button
               type="submit"
               kind="primary"
               data-cy="save-kb-settings"
-              [disabled]="kbForm.invalid || (kbForm.pristine && configForm.pristine) || saving">
+              [disabled]="kbForm.invalid || kbForm.pristine || saving">
               {{ 'generic.save' | translate }}
             </pa-button>
             <pa-button
               aspect="basic"
-              [disabled]="kbForm.pristine && configForm.pristine"
-              (click)="resetForms()">
+              [disabled]="kbForm.pristine"
+              (click)="resetKbForm()">
               {{ 'generic.cancel' | translate }}
             </pa-button>
           </footer>
