--- a/libs/common/src/lib/navbar/navbar.component.html
+++ b/libs/common/src/lib/navbar/navbar.component.html
@@ -187,125 +187,126 @@
         </div>
       }
     </div>
-    <div
-      *ngIf="(inAccount | async) && (isAccountManager | async)"
-      class="navbar-content dark">
-      <div class="nav-group">
-        <div class="group-items">
-          <a
-            [routerLink]="(accountUrl | async) + '/home'"
-            routerLinkActive="active"
-            data-cy="go-to-account-home"
-            class="nav-link">
-            <pa-icon name="home"></pa-icon>
-            <span class="nav-link-title">{{ 'navbar.account-home' | translate }}</span>
-          </a>
+
+    @if (!standalone && (inAccount | async) && (isAccountManager | async)) {
+      <div class="navbar-content dark">
+        <div class="nav-group">
+          <div class="group-items">
+            <a
+              [routerLink]="(accountUrl | async) + '/home'"
+              routerLinkActive="active"
+              data-cy="go-to-account-home"
+              class="nav-link">
+              <pa-icon name="home"></pa-icon>
+              <span class="nav-link-title">{{ 'navbar.account-home' | translate }}</span>
+            </a>
+          </div>
+          <div class="group-items">
+            <a
+              [routerLink]="(accountUrl | async) + '/settings'"
+              routerLinkActive="active"
+              data-cy="go-to-account-settings"
+              class="nav-link">
+              <pa-icon name="gear"></pa-icon>
+              <span class="nav-link-title">{{ 'navbar.account-settings' | translate }}</span>
+            </a>
+          </div>
+          <div class="group-items">
+            <a
+              [routerLink]="(accountUrl | async) + '/kbs'"
+              routerLinkActive="active"
+              data-cy="go-to-account-kbs"
+              class="nav-link">
+              <pa-icon name="knowledge-box"></pa-icon>
+              <span class="nav-link-title">{{ 'navbar.manage-kbs' | translate }}</span>
+            </a>
+          </div>
+          <div class="group-items">
+            <a
+              [routerLink]="(accountUrl | async) + '/users'"
+              routerLinkActive="active"
+              data-cy="go-to-account-users"
+              class="nav-link">
+              <pa-icon name="users"></pa-icon>
+              <span class="nav-link-title">{{ 'navbar.users' | translate }}</span>
+            </a>
+          </div>
+          <div class="group-items">
+            <a
+              [routerLink]="(accountUrl | async) + '/nua'"
+              routerLinkActive="active"
+              data-cy="go-to-nua-keys"
+              class="nav-link">
+              <pa-icon name="key"></pa-icon>
+              <span class="nav-link-title">{{ 'navbar.nua-keys' | translate }}</span>
+            </a>
+          </div>
+          @if (isBillingEnabled | async) {
+            <div class="group-items">
+              <a
+                [routerLink]="(accountUrl | async) + '/billing/subscriptions'"
+                routerLinkActive="active"
+                data-cy="go-to-billing"
+                class="nav-link"
+                [class.sub-item]="inBilling | async">
+                <pa-icon name="payment"></pa-icon>
+                <span class="nav-link-title">{{ 'navbar.subscription' | translate }}</span>
+              </a>
+            </div>
+          }
+          @if ((isSubscribed | async) && (inBilling | async)) {
+            <div class="nav-group">
+              <div class="group-items">
+                <a
+                  [routerLink]="(accountUrl | async) + '/billing/checkout'"
+                  routerLinkActive="active"
+                  data-cy="go-to-checkout"
+                  class="nav-link sub-item">
+                  <pa-icon name="payment-details"></pa-icon>
+                  <span class="nav-link-title">{{ 'billing.payment_details' | translate }}</span>
+                </a>
+                <a
+                  [routerLink]="(accountUrl | async) + '/billing/my-subscription'"
+                  routerLinkActive="active"
+                  data-cy="go-to-my-subscription"
+                  class="nav-link sub-item">
+                  <pa-icon name="info"></pa-icon>
+                  <span class="nav-link-title">{{ 'billing.my-subscription' | translate }}</span>
+                </a>
+                <a
+                  [routerLink]="(accountUrl | async) + '/billing/usage'"
+                  routerLinkActive="active"
+                  data-cy="go-to-usage"
+                  class="nav-link sub-item">
+                  <pa-icon name="chart"></pa-icon>
+                  <span class="nav-link-title">{{ 'billing.usage.consumption' | translate }}</span>
+                </a>
+                <a
+                  [routerLink]="(accountUrl | async) + '/billing/history'"
+                  routerLinkActive="active"
+                  data-cy="go-to-history"
+                  class="nav-link sub-item">
+                  <pa-icon name="history"></pa-icon>
+                  <span class="nav-link-title">{{ 'billing.history.link' | translate }}</span>
+                </a>
+              </div>
+            </div>
+          }
         </div>
-        <div class="group-items">
-          <a
-            [routerLink]="(accountUrl | async) + '/settings'"
-            routerLinkActive="active"
-            data-cy="go-to-account-settings"
-            class="nav-link">
-            <pa-icon name="gear"></pa-icon>
-            <span class="nav-link-title">{{ 'navbar.account-settings' | translate }}</span>
-          </a>
-        </div>
-        <div class="group-items">
-          <a
-            [routerLink]="(accountUrl | async) + '/kbs'"
-            routerLinkActive="active"
-            data-cy="go-to-account-kbs"
-            class="nav-link">
-            <pa-icon name="knowledge-box"></pa-icon>
-            <span class="nav-link-title">{{ 'navbar.manage-kbs' | translate }}</span>
-          </a>
-        </div>
-        <div class="group-items">
-          <a
-            [routerLink]="(accountUrl | async) + '/users'"
-            routerLinkActive="active"
-            data-cy="go-to-account-users"
-            class="nav-link">
-            <pa-icon name="users"></pa-icon>
-            <span class="nav-link-title">{{ 'navbar.users' | translate }}</span>
-          </a>
-        </div>
-        <div class="group-items">
-          <a
-            [routerLink]="(accountUrl | async) + '/nua'"
-            routerLinkActive="active"
-            data-cy="go-to-nua-keys"
-            class="nav-link">
-            <pa-icon name="key"></pa-icon>
-            <span class="nav-link-title">{{ 'navbar.nua-keys' | translate }}</span>
-          </a>
-        </div>
-        <div
-          *ngIf="isBillingEnabled | async"
-          class="group-items">
-          <a
-            [routerLink]="(accountUrl | async) + '/billing/subscriptions'"
-            routerLinkActive="active"
-            data-cy="go-to-billing"
-            class="nav-link"
-            [class.sub-item]="inBilling | async">
-            <pa-icon name="payment"></pa-icon>
-            <span class="nav-link-title">{{ 'navbar.subscription' | translate }}</span>
-          </a>
-        </div>
-        @if ((isSubscribed | async) && (inBilling | async)) {
+        @if (kb | async) {
           <div class="nav-group">
             <div class="group-items">
               <a
-                [routerLink]="(accountUrl | async) + '/billing/checkout'"
-                routerLinkActive="active"
-                data-cy="go-to-checkout"
-                class="nav-link sub-item">
-                <pa-icon name="payment-details"></pa-icon>
-                <span class="nav-link-title">{{ 'billing.payment_details' | translate }}</span>
-              </a>
-              <a
-                [routerLink]="(accountUrl | async) + '/billing/my-subscription'"
-                routerLinkActive="active"
-                data-cy="go-to-my-subscription"
-                class="nav-link sub-item">
-                <pa-icon name="info"></pa-icon>
-                <span class="nav-link-title">{{ 'billing.my-subscription' | translate }}</span>
-              </a>
-              <a
-                [routerLink]="(accountUrl | async) + '/billing/usage'"
-                routerLinkActive="active"
-                data-cy="go-to-usage"
-                class="nav-link sub-item">
-                <pa-icon name="chart"></pa-icon>
-                <span class="nav-link-title">{{ 'billing.usage.consumption' | translate }}</span>
-              </a>
-              <a
-                [routerLink]="(accountUrl | async) + '/billing/history'"
-                routerLinkActive="active"
-                data-cy="go-to-history"
-                class="nav-link sub-item">
-                <pa-icon name="history"></pa-icon>
-                <span class="nav-link-title">{{ 'billing.history.link' | translate }}</span>
+                [routerLink]="kbUrl"
+                data-cy="go-to-home-from-account"
+                class="nav-link">
+                <pa-icon name="chevron-left"></pa-icon>
+                <span class="nav-link-title">{{ 'generic.back' | translate }}</span>
               </a>
             </div>
           </div>
         }
       </div>
-      <div
-        class="nav-group"
-        *ngIf="kb | async">
-        <div class="group-items">
-          <a
-            [routerLink]="kbUrl"
-            data-cy="go-to-home-from-account"
-            class="nav-link">
-            <pa-icon name="chevron-left"></pa-icon>
-            <span class="nav-link-title">{{ 'generic.back' | translate }}</span>
-          </a>
-        </div>
-      </div>
-    </div>
+    }
   </div>
 </div>
