Add AI models page in NucliaDB admin
  - Add route for AI models page in NucliaDB admin
  - Support new `getLearningSchema` in KB
  - Add error message when KB doesn't support learning configuration

--- a/libs/common/src/lib/ai-models/ai-models.component.html
+++ b/libs/common/src/lib/ai-models/ai-models.component.html
@@ -3,7 +3,12 @@
     <div class="display-s">{{ 'kb.ai-models.page-title' | translate }}</div>
     <p class="description">{{ 'kb.ai-models.page-description' | translate }}</p>
 
-    @if (configForm) {
+    @if (noKbConfig) {
+      <p class="error">
+        <pa-icon name="warning"></pa-icon>
+        {{ 'kb.ai-models.error.kb-not-supported' | translate }}
+      </p>
+    } @else if (configForm) {
       <form
         [formGroup]="configForm"
         (ngSubmit)="save()">
