KB creation from NucliaDB admin

--- a/libs/common/src/lib/kb-add/kb-add.component.html
+++ b/libs/common/src/lib/kb-add/kb-add.component.html
@@ -46,8 +46,8 @@
               <pa-toggle
                 formControlName="anonymization"
                 labelOnRight
-                [help]="'kb.settings.anonymization_toggle.help' | translate">
-                {{ 'kb.settings.anonymization_toggle.label' | translate }}
+                [help]="'kb.ai-models.anonymization_toggle.help' | translate">
+                {{ 'kb.ai-models.anonymization_toggle.label' | translate }}
               </pa-toggle>
             }
           </div>
