--- a/libs/common/src/lib/upload/upload-data/upload-layout.component.html
+++ b/libs/common/src/lib/upload/upload-data/upload-layout.component.html
@@ -9,6 +9,6 @@
       icon="gear"
       size="small"
       aspect="basic"
-      paTooltip="stash.upload.sync.setup-button"></pa-button>
+      paTooltip="stash.upload.sync.setup-button">{{ 'stash.upload.sync.setup-button' | translate }}</pa-button>
   </div>
 }
