[sc-8778] Improve the sync server settings (#1336)
* Modify sync server settings form

* Add button to modify sync server settings

* Fix build

* Accessibility fix

Co-authored-by: Mat Pellerin <mpellerin42@gmail.com>

---------

Co-authored-by: Mat Pellerin <mpellerin42@gmail.com>

--- a/libs/common/src/lib/upload/upload-data/upload-layout.component.html
+++ b/libs/common/src/lib/upload/upload-data/upload-layout.component.html
@@ -1,8 +1,14 @@
 <div class="page-spacing">
   <router-outlet></router-outlet>
 </div>
-@if (!standalone && hasSyncServer) {
+@if (!standalone && (hasSyncServer | async)) {
   <div class="sync-status">
     {{ ((isServerDown | async) ? 'upload.server.server_down' : 'upload.server.server_up') | translate }}
+    <pa-button
+      (click)="setupSync()"
+      icon="gear"
+      size="small"
+      aspect="basic"
+      paTooltip="stash.upload.sync.setup-button">{{ 'stash.upload.sync.setup-button' | translate }}</pa-button>
   </div>
 }
