--- a/apps/manager-v2/src/app/manage-zones/zone-list/zone-list.component.html
+++ b/apps/manager-v2/src/app/manage-zones/zone-list/zone-list.component.html
@@ -11,8 +11,7 @@
       routerLink="./add"
       kind="primary"
       icon="plus"
-      iconAndText
-      size="large">
+      iconAndText>
       Add zone
     </pa-button>
   </div>
@@ -25,26 +24,27 @@
         <pa-table-cell header>Tile</pa-table-cell>
         <pa-table-cell-menu header></pa-table-cell-menu>
       </pa-table-header>
-      <pa-table-row
-        *ngFor="let zone of zones$ | async | slice : 0 : lastIndex"
-        [routerLink]="zone.id"
-        clickable>
-        <pa-table-cell>
-          <small>{{ zone.id }}</small>
-        </pa-table-cell>
-        <pa-table-cell>{{ zone.slug }}</pa-table-cell>
-        <pa-table-cell>{{ zone.title }}</pa-table-cell>
-        <pa-table-cell-menu>
-          <pa-button
-            icon="trash"
-            aspect="basic"
-            size="small"
-            kind="destructive"
-            (click)="deleteZone($event, zone)">
-            Delete zone
-          </pa-button>
-        </pa-table-cell-menu>
-      </pa-table-row>
+      @for (zone of zones$ | async | slice: 0 : lastIndex; track zone.id) {
+        <pa-table-row
+          [routerLink]="zone.id"
+          clickable>
+          <pa-table-cell>
+            <small>{{ zone.id }}</small>
+          </pa-table-cell>
+          <pa-table-cell>{{ zone.slug }}</pa-table-cell>
+          <pa-table-cell>{{ zone.title }}</pa-table-cell>
+          <pa-table-cell-menu>
+            <pa-button
+              icon="trash"
+              aspect="basic"
+              size="small"
+              kind="destructive"
+              (click)="deleteZone($event, zone)">
+              Delete zone
+            </pa-button>
+          </pa-table-cell-menu>
+        </pa-table-row>
+      }
     </pa-table>
   </pa-infinite-scroll>
 </div>
